tests/fixtures/valid/tuple/tuple_indexing.py
# Tuple indexing
t: tuple[int, int, int] = (10, 20, 30)
print(t[0])
print(t[1])
print(t[2])
# Expected output:
# 10
# 20
# 30
