tests/fixtures/invalid/list_le_float.py
# Cannot compare with <= List[int] and Float
x: bool = [1, 2, 3] <= 1.0
